--- a/scripts/ansible/playbooks/label_k8s_nodes.yml
+++ b/scripts/ansible/playbooks/label_k8s_nodes.yml
@@ -4,9 +4,6 @@
   become: false
 
   tasks:
-    - name: Import community.general collection
-      community.general.collection_info:
-      
     - name: Label centos7 nodes
       command: "kubectl label node {{ item }} doslab/virt.tool.centos="
       when: ansible_facts['distribution'] == 'CentOS' and ansible_facts['distribution_major_version'] == '7'
@@ -15,6 +12,6 @@
 
     - name: Label ubuntu22 nodes
       command: "kubectl label node {{ item }} doslab/virt.tool.ubuntu="
-      when: ansible_facts['distribution'] == 'Ubuntu' and ansible_facts['distribution_version'] | version_compare('22', '>=') | bool
+      when: ansible_facts['distribution'] == 'Ubuntu' and ansible_facts['distribution_version'] == '22.04'
       with_items: "{{ ansible_play_batch }}"
       run_once: true
