fix go build sdsctl bug

--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -168,6 +168,7 @@
           - python3-pip
           - python3-libvirt
           - qemu-kvm
+          - libvirt-dev
           - libvirt-daemon-system
           - virtinst
           - libvirt-clients
