supporting install and config chrony via ansible

--- a/scripts/ansible/inventory.ini
+++ b/scripts/ansible/inventory.ini
@@ -1,7 +1,13 @@
 [master] # 主节点组
-# 节点hostname
-node1
+# 填节点hostname，即IP地址
+192.168.100.10
 
 [worker] # 计算节点组
-# 节点hostname
-node2
+# 填节点hostname，即IP地址
+192.168.100.11
+192.168.100.12
+192.168.100.13
+
+[chrony] # 时间服务器，只设置1台
+# 填节点hostname，即IP地址
+192.168.100.10
