修复时间服务器时区不一致bug

--- a/scripts/ansible/playbooks/install_and_setup_chrony.yml
+++ b/scripts/ansible/playbooks/install_and_setup_chrony.yml
@@ -17,6 +17,9 @@
             state: present
           when: ansible_os_family == 'Debian'
 
+    - name: Set timezone to Asia/Shanghai
+      ansible.builtin.command: timedatectl set-timezone Asia/Shanghai
+
     - name: Configure Chrony servers
       block:
         # Render Chrony configuration based on inventory groups
