--- a/docker/base/centos7/Dockerfile
+++ b/docker/base/centos7/Dockerfile
@@ -1,35 +1,17 @@
 FROM centos:7.9.2009
 
-RUN yum install epel-release -y
-
-RUN yum install centos-release-openstack-rocky.noarch -y
-
-RUN yum install python3 python3-devel python3-pip libcurl-devel -y
-
-RUN yum install cloud-utils usbutils libguestfs-tools-c virt-manager libvirt-devel gcc gcc-c++ glib-devel glibc-devel libvirt virt-install qemu-kvm -y
-
-RUN yum install glusterfs-client-xlators glusterfs-cli lusterfs-extra-xlators glusterfs-fuse iscsiadm -y
-
-RUN yum install openvswitch-ovn* openvswitch python-openvswitch openvswitch-test openvswitch-devel openvswitch-ipsec -y
-
-#RUN pip2 install --upgrade "pip < 21.0.0"
-
-#RUN pip2 install --ignore-installed google threadpool setuptools==38.4.0 cachetools prometheus_client kubernetes==11.0.0 libvirt-python==5.9.0 xmljson xmltodict watchdog==0.10.7 pyyaml grpcio==1.28.1 grpcio-tools==1.28.1 protobuf psutil
-
-RUN pip3 install --upgrade pip
-
-RUN pip3 install --ignore-installed threadpool prometheus_client kubernetes==26.1.0 libvirt-python==5.9.0 xmljson xmltodict watchdog pyyaml grpcio grpcio-tools protobuf psutil tenacity
-
-# RUN export PYCURL_SSL_LIBRARY=openssl
-
-# RUN easy_install pycurl
-
 WORKDIR /home
 
 ADD sdsctl-install.sh /home
 
-RUN bash sdsctl-install.sh
-
-RUN yum clean all
-
-RUN rm -fr /tmp/*
+RUN yum install epel-release -y && \
+    yum install centos-release-openstack-rocky.noarch -y && \
+    yum install python3 python3-devel python3-pip libcurl-devel -y && \
+    yum install cloud-utils usbutils libguestfs-tools-c virt-manager libvirt-devel gcc gcc-c++ glib-devel glibc-devel libvirt virt-install qemu-kvm -y && \
+    yum install glusterfs-client-xlators glusterfs-cli lusterfs-extra-xlators glusterfs-fuse iscsiadm -y && \
+    yum install openvswitch-ovn* openvswitch python-openvswitch openvswitch-test openvswitch-devel openvswitch-ipsec -y && \
+    pip3 install --upgrade pip && \
+    pip3 install --ignore-installed threadpool prometheus_client kubernetes==26.1.0 libvirt-python==5.9.0 xmljson xmltodict watchdog pyyaml grpcio grpcio-tools protobuf psutil tenacity && \
+    bash sdsctl-install.sh && \
+    yum clean all && \
+    rm -fr /tmp/*
