修复kubectl get vmd显示路径为空的问题

--- a/scripts/yamls/centos7/kubevirtResource.yaml
+++ b/scripts/yamls/centos7/kubevirtResource.yaml
@@ -168,7 +168,7 @@ spec:
     - jsonPath: .spec.volume.format
       name: TYPE
       type: string  
-    - jsonPath: .spec.volume.filename
+    - jsonPath: .spec.volume.current
       name: PATH
       type: string  
     - jsonPath: .spec.status.conditions.state.waiting.reason
