add kubesys in docker centos

--- a/docker/libvirtwatcher/centos7/Dockerfile
+++ b/docker/libvirtwatcher/centos7/Dockerfile
@@ -10,6 +10,8 @@ ADD libvirtwatcher /home/kubevmm/core/libvirtwatcher
 
 ADD utils /home/kubevmm/core/utils
 
+ADD kubesys /home/kubevmm/core/kubesys
+
 ADD *.cfg /home/kubevmm/core/utils
 
 RUN rm -fr /tmp/*
