--- a/scripts/yamls/ubuntu22/kubevirtResource.yaml
+++ b/scripts/yamls/ubuntu22/kubevirtResource.yaml
@@ -209,10 +209,10 @@ spec:
             type: object
             x-kubernetes-preserve-unknown-fields: true
     additionalPrinterColumns:
-    - jsonPath: .spec.volume.format
+    - jsonPath: .spec.volume.target.format._type
       name: TYPE
-      type: string  
-    - jsonPath: .spec.volume.current
+      type: string
+    - jsonPath: .spec.volume.target.path.text
       name: PATH
       type: string  
     - jsonPath: .spec.status.conditions.state.waiting.reason
