--- a/docker/virtctl/ubuntu22/Dockerfile
+++ b/docker/virtctl/ubuntu22/Dockerfile
@@ -14,6 +14,8 @@ ADD utils /home/kubevmm/core/utils
 
 ADD *.cfg /home/kubevmm/core/utils
 
+ADD kubesys /home/kubevmm/core/kubesys
+
 ADD virtctl /home/kubevmm/core/virtctl
 
 ADD kubeovn-adm /home/kubevmm/bin/
