--- a/scripts/yamls/centos7/kubevirtResource.yaml
+++ b/scripts/yamls/centos7/kubevirtResource.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    kubevirt.io: ""
+    doslab.io: ""
   name: virtualmachines.doslab.io
 spec:
   group: doslab.io
@@ -59,7 +59,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    kubevirt.io: ""
+    doslab.io: ""
   name: virtualmachinenetworks.doslab.io
 spec:
   group: doslab.io
@@ -97,51 +97,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    kubevirt.io: ""
-  name: virtualmachineimages.doslab.io
-spec:
-  group: doslab.io
-  names:
-    kind: VirtualMachineImage
-    plural: virtualmachineimages
-    shortNames:
-    - vmi
-    - vmis
-    singular: virtualmachineimage
-  scope: Namespaced
-  versions:
-  - name: v1
-    served: true
-    storage: true
-    schema:
-      openAPIV3Schema:
-        type: object
-        properties:
-          spec:
-            type: object
-            x-kubernetes-preserve-unknown-fields: true
-    additionalPrinterColumns:
-    - jsonPath: .spec.domain.uuid.text
-      name: UUID
-      type: string
-    - jsonPath: .spec.status.conditions.state.waiting.reason
-      name: STATUS
-      type: string
-    - jsonPath: .metadata.creationTimestamp
-      name: AGE
-      type: date
-    - jsonPath: .spec.nodeName
-      name: NODE
-      type: string
-    - jsonPath: .spec.image
-      name: IMAGE
-      type: string        
----
-apiVersion: apiextensions.k8s.io/v1
-kind: CustomResourceDefinition
-metadata:
-  labels:
-    kubevirt.io: ""
+    doslab.io: ""
   name: virtualmachinedisks.doslab.io
 spec:
   group: doslab.io
@@ -185,7 +141,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    kubevirt.io: ""
+    doslab.io: ""
   name: virtualmachinediskimages.doslab.io
 spec:
   group: doslab.io
@@ -229,7 +185,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    kubevirt.io: ""
+    doslab.io: ""
   name: virtualmachinesnapshots.doslab.io
 spec:
   group: doslab.io
@@ -273,7 +229,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    kubevirt.io: ""
+    doslab.io: ""
   name: virtualmachinepools.doslab.io
 spec:
   group: doslab.io
@@ -326,7 +282,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    kubevirt.io: ""
+    doslab.io: ""
   name: virtualmachinedisksnapshots.doslab.io
 spec:
   group: doslab.io
@@ -373,7 +329,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    kubevirt.io: ""
+    doslab.io: ""
   name: virtualmachinebackups.doslab.io
 spec:
   group: doslab.io
@@ -423,7 +379,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    kubevirt.io: ""
+    doslab.io: ""
   name: virtualmachinespecs.doslab.io
 spec:
   group: doslab.io
@@ -451,7 +407,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    kubevirt.io: ""
+    doslab.io: ""
   name: virtualmachinediskspecs.doslab.io
 spec:
   group: doslab.io
