--- a/scripts/yamls/ubuntu22/kubevirtResource.yaml
+++ b/scripts/yamls/ubuntu22/kubevirtResource.yaml
@@ -170,7 +170,7 @@ spec:
       type: string
     - jsonPath: .spec.volume.target.path.text
       name: PATH
-      type: string  
+      type: string
     - jsonPath: .spec.status.conditions.state.waiting.reason
       name: STATUS
       type: string
@@ -214,7 +214,7 @@ spec:
       type: string
     - jsonPath: .spec.domainsnapshot.domain.name.text
       name: VM
-      type: string  
+      type: string
     - jsonPath: .spec.status.conditions.state.waiting.reason
       name: STATUS
       type: string
@@ -255,7 +255,7 @@ spec:
     additionalPrinterColumns:
     - jsonPath: .spec.pool.content
       name: CONTENT
-      type: string  
+      type: string
     - jsonPath: .spec.pool.url
       name: PATH
       type: string
@@ -308,13 +308,13 @@ spec:
     additionalPrinterColumns:
     - jsonPath: .spec.volume.format
       name: TYPE
-      type: string  
-    - jsonPath: .spec.volume.current
+      type: string
+    - jsonPath: .spec.volume.filename
       name: PATH
-      type: string 
+      type: string
     - jsonPath: .spec.volume.full_backing_filename
       name: BACKING STORE
-      type: string 
+      type: string
     - jsonPath: .spec.status.conditions.state.waiting.reason
       name: STATUS
       type: string
@@ -374,7 +374,7 @@ spec:
     - jsonPath: .spec.nodeName
       name: NODE
       type: string
-  ---
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
