--- a/scripts/ansible/playbooks/install_uniVirt.yml
+++ b/scripts/ansible/playbooks/install_uniVirt.yml
@@ -5,6 +5,7 @@
   vars:
     ver: "v1.0.0"
     yaml_directory: "/root/uniVirt/scripts/yamls"
+    offline:
 
   tasks:
     - name: Copy virt-tool-centos.yaml.tmp to virt-tool-centos.yaml
