--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -80,6 +80,21 @@
         force: yes
       when: ansible_os_family == 'RedHat' and offline is none
 
+    - name: Create symbolic link for python3
+      file:
+        src: /opt/anaconda3/bin/python
+        dest: /usr/local/bin/python3
+        state: link
+      when: ansible_os_family == 'RedHat' and offline is none
+
+    - name: Create symbolic link for pip3
+      file:
+        src: /opt/anaconda3/bin/pip
+        dest: /usr/local/bin/pip3
+        state: link
+        force: yes
+      when: ansible_os_family == 'RedHat' and offline is none
+
     - name: Verify Python and pip installation
       command: python3 --version && pip3 --version && python3.9 --version && pip3.9 --version
       when: ansible_os_family == 'RedHat' and offline is none
