--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -158,6 +158,7 @@
           - psutil
           - pyinstaller
           - tenacity
+          - requests
         state: latest
         executable: pip3
       tags: 
