--- a/docker/base/centos7/Dockerfile
+++ b/docker/base/centos7/Dockerfile
@@ -14,7 +14,7 @@ ENV PYTHON_VERSION "3.9.7"
 RUN set -ex \
     # 预安装所需组件
     && yum install -y wget tar libffi-devel zlib-devel bzip2-devel openssl-devel ncurses-devel sqlite-devel readline-devel tk-devel gcc make initscripts \
-    && wget https://npm.taobao.org/mirrors/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tgz \
+    && wget --no-check-certificate https://npm.taobao.org/mirrors/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tgz \
     && tar -zxvf Python-${PYTHON_VERSION}.tgz \
     && cd Python-${PYTHON_VERSION} \
     && ./configure prefix=/usr/local/python3 \
