--- a/docker/base/centos7/Dockerfile
+++ b/docker/base/centos7/Dockerfile
@@ -68,8 +68,8 @@ RUN yum install epel-release -y && \
     yum install cloud-utils usbutils libguestfs-tools-c virt-manager libvirt-devel gcc-c++ glib-devel glibc-devel libvirt virt-install qemu-kvm -y && \
     yum install glusterfs-client-xlators glusterfs-cli lusterfs-extra-xlators glusterfs-fuse iscsiadm -y && \
     yum install openvswitch-ovn* openvswitch python-openvswitch openvswitch-test openvswitch-devel openvswitch-ipsec -y && \
-    pip install --upgrade pip && \
-    pip install --ignore-installed threadpool prometheus_client kubernetes==26.1.0 libvirt-python==5.9.0 xmljson xmltodict watchdog pyyaml grpcio grpcio-tools protobuf psutil tenacity cryptography&& \
+    pip3 install --upgrade pip && \
+    pip3 install --ignore-installed threadpool prometheus_client kubernetes==26.1.0 libvirt-python==5.9.0 xmljson xmltodict watchdog pyyaml grpcio grpcio-tools protobuf psutil tenacity cryptography&& \
     bash sdsctl-install.sh && \
     yum clean all && \
     rm -fr /tmp/*
