--- a/docker/base/centos7/Dockerfile
+++ b/docker/base/centos7/Dockerfile
@@ -1,7 +1,8 @@
-FROM centos:7
+FROM centos:7.9.2009
 ENV PYTHON_VERSION "3.9.7"
 
 RUN set -ex \
+    && yum update -y \
     && yum install -y wget tar libffi-devel zlib-devel bzip2-devel openssl-devel ncurses-devel sqlite-devel readline-devel tk-devel gcc make initscripts \
     && wget --no-check-certificate https://npm.taobao.org/mirrors/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tgz \
     && tar -zxvf Python-${PYTHON_VERSION}.tgz \
@@ -41,14 +42,13 @@ WORKDIR /home
 
 ADD sdsctl-install.sh /home
 
-RUN yum install epel-release -y && \
-    yum install centos-release-openstack-rocky.noarch -y && \
-    yum install openssl openssl-devel libcurl-devel -y && \
+RUN yum install centos-release-openstack-rocky.noarch -y && \
+    yum install libcurl-devel -y && \
     yum install cloud-utils usbutils libguestfs-tools-c virt-manager libvirt-devel gcc-c++ glib-devel glibc-devel libvirt virt-install qemu-kvm -y && \
     yum install glusterfs-client-xlators glusterfs-cli lusterfs-extra-xlators glusterfs-fuse iscsiadm -y && \
     yum install openvswitch-ovn* openvswitch python-openvswitch openvswitch-test openvswitch-devel openvswitch-ipsec -y && \
     pip3 install --upgrade pip && \
-    pip3 install --ignore-installed threadpool prometheus_client kubernetes==26.1.0 libvirt-python==5.9.0 xmljson xmltodict watchdog pyyaml grpcio grpcio-tools protobuf psutil tenacity cryptography&& \
+    pip3 install --ignore-installed urllib3==1.26.7 threadpool prometheus_client kubernetes==26.1.0 libvirt-python==5.9.0 xmljson xmltodict watchdog pyyaml grpcio grpcio-tools protobuf psutil tenacity cryptography&& \
     bash sdsctl-install.sh && \
     yum clean all && \
     rm -fr /tmp/*
